k8s/manifest/drupal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal
  namespace: drupal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: drupal
  template:
    metadata:
      labels:
        app: drupal
    spec:
      containers:
      - name: drupal
        image: <your-account-id>.dkr.ecr.<your-region>.amazonaws.com/drupal:latest  # or Docker Hub image
        ports:
        - containerPort: 80
        volumeMounts:
        - name: drupal-data
          mountPath: /var/www/html/sites
      volumes:
      - name: drupal-data
        persistentVolumeClaim:
          claimName: drupal-pvc
