k8s/manifest/drupal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal-service
  namespace: drupal
spec:
  selector:
    app: drupal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer  # Creates an AWS ALB
