k8s/manifest/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: drupal
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
