k8s/manifest/drupal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drupal-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - host: drupal-app-alb-407123160.us-east-1.elb.amazonaws.com  # Your ALB DNS
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drupal-service  # Matches your drupal-service.yaml
            port:
              number: 80
